tests/valid/conditional_statement/if_not_taken.rs
/*
return: 0
*/

main(): i32 {
    a: i64 = 0;
    b: i64 = 0;
    if (a)
        b = 1;
    return b;
}