tests/invalid/character_literals/missing_end_quote.rs
/*
compilationExitCode: 1
*/

main(): i32{
    char: i8 = 'a;
    return 0;
}